-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.5.0-beta
-
Win7 SP1 64bit, Qt 4.8 (self-compiled with MSVC2010, mkspecs: win32-msvc2010)
-
6e0caec046d3b27e78665271959d9a2339a4fa53
Steps to reproduce:
- load a QML project (I've chosen the samegame example)
- set some breakpoints
- start debugging and try to change a value inside Locals & Expressions
Expected result:
- change is reflected inside the app running inside QML Viewer
Current result:
- Qml Viewer crashes
For Gerrit Dashboard: QTCREATORBUG-7089 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
19925,2 | QmlDebugging: Assign Value in Debugger | 2.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |